# mcp-everything-search-optimized

./: .gitignore  CHANGELOG.md  LICENSE  MCP_BEST_PRACTICES_IMPLEMENTATION.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SEARCH_SYNTAX.md  TESTING_REPORT.md  pyproject.toml
Everything-SDK/: README.md
Everything-SDK/dll/: .gitkeep
Everything-SDK/include/: .gitkeep
src/mcp_server_everything_search/: __init__.py  __main__.py  everything_sdk.py  platform_search.py  search_interface.py  server.py
tests/: test_issue_14_spaces.py  test_mcp_security_fixes.py
