[project]
name = \"mcp-server-everything-search-optimized\"
version = \"1.0.0\"
description = \"An optimized Model Context Protocol server providing fast file searching with enhanced security and MCP best practices\"
readme = \"README.md\"
requires-python = \">=3.8\"
authors = [
    { name = \"Colton Wang\", email = \"2101273531@qq.com\" },
]
keywords = [\"everything\", \"search\", \"mcp\", \"llm\", \"security\", \"optimized\"]
license = { file = \"LICENSE\" }
classifiers = [
    \"Development Status :: 5 - Production/Stable\",
    \"Intended Audience :: Developers\",
    \"License :: OSI Approved :: MIT License\",
    \"Programming Language :: Python :: 3\",
    \"Programming Language :: Python :: 3.8\",
    \"Programming Language :: Python :: 3.9\",
    \"Programming Language :: Python :: 3.10\",
    \"Programming Language :: Python :: 3.11\",
    \"Programming Language :: Python :: 3.12\",
    \"Topic :: Software Development :: Libraries :: Python Modules\",
    \"Topic :: System :: Filesystems\",
    \"Topic :: Security\",
]
dependencies = [
    \"mcp>=1.0.0\",
    \"pydantic>=2.0.0\",
]

[project.urls]
Homepage = \"https://github.com/Colton-wq/mcp-everything-search-optimized\"
Repository = \"https://github.com/Colton-wq/mcp-everything-search-optimized\"
Issues = \"https://github.com/Colton-wq/mcp-everything-search-optimized/issues\"
Changelog = \"https://github.com/Colton-wq/mcp-everything-search-optimized/blob/main/CHANGELOG.md\"

[project.scripts]
mcp-server-everything-search-optimized = \"mcp_server_everything_search:main\"

[build-system]
requires = [\"hatchling\"]
build-backend = \"hatchling.build\"

[tool.uv]
dev-dependencies = [
    \"pyright>=1.1.389\",
    \"pytest>=7.0.0\",
    \"pytest-cov>=4.0.0\",
    \"black>=23.0.0\",
    \"isort>=5.12.0\",
    \"flake8>=6.0.0\",
]

[tool.pytest.ini_options]
testpaths = [\"tests\"]
python_files = [\"test_*.py\"]
python_classes = [\"Test*\"]
python_functions = [\"test_*\"]
addopts = \"-v --tb=short\"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = \"black\"
multi_line_output = 3
line_length = 88
known_first_party = [\"mcp_server_everything_search\"]

[tool.pyright]
include = [\"src\", \"tests\"]
exclude = [\"**/__pycache__\"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = \"3.8\"
pythonPlatform = \"All\"